# napari-cellspots

./: .gitignore  README.md  pixi.toml  pyproject.toml
notebooks/: cellposts_pipeline.ipynb  synthetic_data.ipynb
sample_data/simulations/simulation_asym/: simul_asym_0.tiff  simul_asym_1.tiff
sample_data/simulations/simulation_sym/: simul_sym_0.tiff  simul_sym_1.tiff
src/napari_cellspots/: __init__.py  _postproc.py  _processing.py  _quantification.py  _reader.py  _widget1.py  _widget2.py  napari.yaml  simulation.py
