[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/napari_cellspots/_version.py"

[project]
name = "napari-cellspots"
dynamic = ["version"]
description = "Napari plugin for 2D image analysis: ICS reader, cell/spot segmentation, polar plot"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy",
    "pandas",
    "scikit-image",
    "tifffile",
    "matplotlib",
]

[project.entry-points."napari.manifest"]
napari-cellspots = "napari_cellspots:napari.yaml"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"napari_cellspots" = ["napari.yaml"]
