[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/napari_cellspots/_version.py"

[project]
name = "napari-cellspots"
dynamic = ["version"]
description = "Napari plugin for spot detection in cells from microscopy images."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD 3-Clause" }
dependencies = [
    "numpy",
    "pandas",
    "scikit-image",
    "tifffile",
    "matplotlib",
    "qtpy",
    "cellpose<4.0.0",
    "spotiflow",
]

[project.entry-points."napari.manifest"]
napari-cellspots = "napari_cellspots:napari.yaml"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"napari_cellspots" = ["napari.yaml"]
